plugins {
    id 'java'
    id 'maven-publish'
}

sourceCompatibility = 17

group 'io.github.bloepiloepi'
version '1.0'

repositories {
    mavenCentral()

    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://repo.velocitypowered.com/snapshots/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.minestom.net/repository/maven-public/' }
}

java {
    withJavadocJar()
    withSourcesJar()
}

dependencies {
    compileOnly 'com.github.Minestom:Minestom:a29a51ee0a'
    testImplementation 'com.github.Minestom:Minestom:a29a51ee0a'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
